--- a/ui/index.html
+++ b/ui/index.html
@@ -7,6 +7,9 @@
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
+        <div class="right">
+            <img src="https://pixabay.com/en/girl-laugh-face-joy-smiling-102829/" class="img-medium"/>
+        </div>    
         <br>
         <div class="center text-big bold">
             Hi! I am your dilip. we need to develop good app
