--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,7 @@
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
-        <div class="right">
+        <div class="center">
             <img src="https://pixabay.com/en/girl-laugh-face-joy-smiling-102829/" class="img-medium"/>
         </div>    
         <br>
