[imad-console] Updates ui/firstpage.html

--- a/ui/firstpage.html
+++ b/ui/firstpage.html
@@ -3,5 +3,21 @@
         <title>
             firstpage! Dilip kumar
         </title>    
+        <meta name ="viewport" content="width=device-width, initial-scale=1"/>
     </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <h3>
+            page-one
+        </h3>   
+        <div>
+            august21 2017
+        </div>  
+        
+        <div>
+            this is the first page created by me
+        </div>    
+    </body>    
 </html>
