--- a/ui/thirdpage.html
+++ b/ui/thirdpage.html
@@ -1,2 +1,23 @@
 <html>
+     <head>
+        <title>
+            Third page! Dilip kumar
+        </title>    
+        <meta name ="viewport" content="width=device-width, initial-scale=1"/>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <h3>
+            page-two
+        </h3>   
+        <div>
+            august21 2017
+        </div>  
+        
+        <div>
+            this is the third page created by me
+        </div>    
+    </body>    
 </html>
