--- a/ui/firstpage.html
+++ b/ui/firstpage.html
@@ -4,20 +4,33 @@
             firstpage! Dilip kumar
         </title>    
         <meta name ="viewport" content="width=device-width, initial-scale=1"/>
+        <style>
+         .container{
+            max-width:800px;
+            margin: 0 auto;
+            color:#404040;
+            font-family:sans-serif;
+            padding-top:60px;
+            padding-left:20px;
+            padding-right:20px;
+         }
+        </style>
     </head>
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <h3>
-            page-one
-        </h3>   
-        <div>
-            august21 2017
-        </div>  
+        <div class="container">
+               <div>
+                   <a href="/">Home</a>
+               </div>
+              <h3>
+                   page-one
+              </h3>   
+               <div>
+                  august21 2017
+               </div>  
         
-        <div>
-            this is the first page created by me
-        </div>    
+               <div>
+                 this is the first page created by me
+               </div>
+        </div>
     </body>    
 </html>
