[imad-console] Updates ui/firstpage.html

--- a/ui/firstpage.html
+++ b/ui/firstpage.html
@@ -29,7 +29,7 @@
                </div>  
         
                <div>
-                 this is the first page created by me
+                 this is the first page created by me. happy coding..you need to develop app which is useful for society and you as well.what is need to do is just keep focusing on things useful to you.
                </div>
         </div>
     </body>    
