[imad-console] Updates ui/secondpage.html

--- a/ui/secondpage.html
+++ b/ui/secondpage.html
@@ -29,7 +29,7 @@
             </div>  
         
             <div>
-                this is the second page created by me
+                this is the second page created by me.I would like to add some content to this..I dont know what to add so i m keep trying to dump some data here.If you like the content read it otherwise forgive it.
              </div>
         </div>
     </body>    
