--- a/ui/thirdpage.html
+++ b/ui/thirdpage.html
@@ -4,20 +4,34 @@
             Third page! Dilip kumar
         </title>    
         <meta name ="viewport" content="width=device-width, initial-scale=1"/>
+         <style>
+         .container{
+            max-width:800px;
+            margin: 0 auto;
+            color:#404040;
+            font-family:sans-serif;
+            padding-top:100px;
+            padding-left:20px;
+            padding-right:20px;
+         }
+        </style>
+        
     </head>
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <h3>
-            page-two
-        </h3>   
-        <div>
-            august21 2017
-        </div>  
+        <div class="container">
+                  <div>
+                       <a href="/">Home</a>
+                 </div>
+                  <h3>
+                       page-two
+                  </h3>   
+                  <div>
+                       august21 2017
+                  </div>  
         
-        <div>
-            this is the third page created by me
-        </div>    
+                  <div>
+                       this is the third page created by me
+                  </div>
+        </div>
     </body>    
 </html>
