[imad-console] Updates ui/thirdpage.html

--- a/ui/thirdpage.html
+++ b/ui/thirdpage.html
@@ -30,7 +30,7 @@
                   </div>  
         
                   <div>
-                       this is the third page created by me
+                       this is the third page created by me.Well try!!keep trying to know in and out of the problem solve it in your style.keep going buddy..You should get internship offer from hasura...Raise in your way...
                   </div>
         </div>
     </body>    
