--- a/ui/thirdpage.html
+++ b/ui/thirdpage.html
@@ -8,7 +8,7 @@
          .container{
             max-width:800px;
             margin: 0 auto;
-            color:#606060;
+            color:967979;
             font-family:sans-serif;
             padding-top:100px;
             padding-left:20px;
